// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Selector Page snapshots rendering correctly with expected Input 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <ErrorBoundary
    learningContextId="course-v1:edX+DemoX+Demo_Course"
    studioEndpointUrl="fakeurl.com"
  >
    <VideoSelector
      learningContextId="course-v1:edX+DemoX+Demo_Course"
      lmsEndpointUrl="evenfakerurl.com"
      studioEndpointUrl="fakeurl.com"
    />
  </ErrorBoundary>
</Provider>
`;

exports[`Video Selector Page snapshots rendering with props to null 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <ErrorBoundary
    learningContextId={null}
    studioEndpointUrl={null}
  >
    <VideoSelector
      learningContextId={null}
      lmsEndpointUrl={null}
      studioEndpointUrl={null}
    />
  </ErrorBoundary>
</Provider>
`;
